Updated downloader to take a directory name

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ stack_overflow_16k.tar.gz
 stack_overflow_dataset/README.md
 stack_overflow_dataset/train
 stack_overflow_dataset/test
+stack_overflow_dataset/README.md
+stack_overflow_dataset/README.md
